--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@ $(() => {
 		</form>
 		<br />
 		<span id="welcome"> -- ようこそ！　ゲスト さん</span>
-		<span class="errorMessage" th:if="${errMessage}" th:text="${errMessage}"> </span>
+		<span id="loginError"></span>
 		<input type="hidden" id="hiddenUserId" value="0" />
 	</div>
 </header>
